# braze_python_assignment

./: .gitignore  assignment_instructions.txt  main.py  pyproject.toml
exploration/: analyze_all_data.py  analyze_data.py  check_knn_attributes.py  check_knn_methods.py  debug_knn.py  ensemble_approach.py  explain_knn.py  find_100_100.py  knn_test.py  threshold_analysis.py  training_analysis.py
tests/: test_expected_outputs.py
