[tool.poetry]
name = "braze-python-assignment"
version = "0.1.0"
description = ""
authors = ["henri <henri@othelia.co>"]
readme = "README.md"
package-mode = true
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.3.4"
pandas = "^2.3.3"
scikit-learn = "^1.7.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
black = "^25.9.0"
matplotlib = "^3.10.7"

[tool.black]
line-length = 88

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

